# LocalColabReactionX

./: .gitignore  README.md  pyproject.toml
examples/calculator/: README.md
examples/constraints/: README.md
examples/dmf/: README.md
examples/minhop/: README.md
examples/neb/: README.md
examples/opt/: README.md
examples/scan/: README.md
examples/sh/: README.md
examples/ts_irc/: README.md
src/localcolabreactionx/: __init__.py  lcrx_cli.py
src/localcolabreactionx/analysis/: ircanalyzer.py  optlog_parser.py  peakdetector.py  scan_visualizer.py  traj2csv.py  vibration_runner.py
src/localcolabreactionx/builders/: constraintbuilder.py  optimizerselect.py  toml2ase.py
src/localcolabreactionx/formats/: gv_freq_format.py  gv_irc_format.py  gv_scan_format.py  logo.py  outpath_format.py
src/localcolabreactionx/runners/: dmf_runner.py  minhop_runner.py  neb_runner.py  nvemd_runner.py  opt_runner.py  scan_runner.py  thermo_runner.py  ts_runner.py
src/localcolabreactionx/utils/: citation_utils.py  environ_utils.py  fairchem_hessian.py  inferencepreset_utils.py  logging_utils.py  plot_utlis.py  toml_examples.py
