[project]
name = "lcrx"
version = "0.1.1"
description = "LCRX: LocalColabReaction eXtended"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

# ase 3.28 causes unexpected error with sella
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "plotly",
    "ase<=3.27",
    "loguru",
    "typer",
    "fairchem-core>=2.17",
    "sella>=2.4.2",
    "pydmf"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
lcrx = "localcolabreactionx.lcrx_cli:app"
localcolabreaction = "localcolabreactionx.lcrx_cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false 

[tool.setuptools.packages.find]
where = ["src"]
